<resources>

    <string name="app_name">1Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="welcome">Welcome to 1Stop!</string>
    <string name="calendar">Schedule for the Day:</string>
    <string name="tasks">Your Todos:</string>
    <string name="news">Current Events:</string>
    <string name="add_button">Add</string>
    <string name="task_create_title">Create a Task</string>
    <string name="task_name">Name for Task:</string>
    <string name="task_date">Due Date:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task">MainActivity</string>
    <string name="submit">Submit</string>
    

</resources>