<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/main_background" >
    
	<TextView
	    android:padding="10dip"
	    android:text="@string/task_create_title"
	    android:textSize="28dip" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/white"/>
	
	<TextView
	    android:paddingTop="20dip"
	    android:paddingBottom="10dip"
	    android:paddingLeft="20dip"
	    android:text="@string/task_name"
	    android:textSize="18dip" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/white"/>

	<EditText
	    android:id="@+id/taskName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" 
	    android:inputType="text"
	    android:hint="">

	    <requestFocus />
	</EditText>

	<TextView
	    android:paddingTop="20dip"
	    android:paddingBottom="10dip"
	    android:paddingLeft="20dip"
	    android:text="@string/task_date"
	    android:textSize="18dip" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/white"/>
	
	<DatePicker
	    android:id="@+id/taskDueDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10dip" 
	    android:layout_gravity="center"/>

	<Button
	    android:id="@+id/createTaskButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:onClick="createTask"
	    android:text="@string/submit" />

</LinearLayout>