<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/main_background"
    android:orientation="vertical">

    <TextView
        style="@style/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        tools:context=".Home" />
    
    <TextView
        style="@style/SubHeading"
        android:text="@string/calendar"/>
    
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dip">
        
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_entries" />           
        
    </ScrollView>

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/task_view_title"
             style="@style/SubHeading"
             android:layout_width="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:text="@string/tasks" />

         <Button
             android:id="@+id/addTaskButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="false"
             android:layout_alignParentLeft="false"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="false"
             android:layout_alignWithParentIfMissing="false"
             android:layout_centerHorizontal="false"
             android:layout_centerInParent="false"
             android:layout_centerVertical="false"
             android:layout_marginRight="15dip"
             android:text="@string/add_button"
             android:onClick="startCreateTask" />

         <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="100dip"
             android:layout_alignParentBottom="false"
             android:layout_alignParentRight="false"
             android:layout_alignParentTop="false"
             android:layout_alignWithParentIfMissing="false"
             android:layout_below="@+id/task_view_title"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="false" >

             <LinearLayout
                 android:id="@+id/task_entries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" 
                 android:orientation="vertical"/>
             
         </ScrollView>
     </RelativeLayout>
    
    <TextView
        style="@style/SubHeading"
        android:text="@string/news"/>
    
</LinearLayout>
